# ez_tpm

./: Cargo.toml  README.md
src/: capability.rs  command.rs  command_code.rs  create.rs  create_primary.rs  get_capability.rs  get_random.rs  lib.rs  pcr_read.rs  structs.rs  tpm_alg_id.rs  tpm_ht.rs  tpm_rh.rs  tpm_sts.rs  tpma_object.rs  uefi.rs  yes_no.rs
