[package]
name = "ez_tpm"
version = "0.1.0"
edition = "2024"

[dependencies]
num_enum = { version = "0.7.4", default-features = false }
uefi = { version = "0.35.0", optional = true, default-features = false }
zerocopy = { version = "0.8.27", default-features = false, features = ["derive"] }

[features]
uefi = ["dep:uefi"]
default = ["uefi"]
